Mon Apr 25 23:26:54 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp (gen_typecode_includes):

	  Generate include directives for
	  "tao/TypeCode_{Struct,Value}_Field.h" headers.  Needed for IBM
	  C++ compiler.

Mon Apr 25 22:47:08 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* tao/Makefile.am:

	  Regenerated.

	* tao/tao.mpc:

	  Added TypeCode_Traits.h and Enum_TypeCode.cpp to list of
	  Header_Files and Template_Files respectively.

Mon Apr 25 19:01:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Policy_ForwardC.h:
          Regenerated

Sat Apr 23 19:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableInterceptorA.cpp:
        * tao/PolicyFactoryA.cpp:
        * tao/TAOA.cpp:
        * tao/PortableServer/ThreadPolicyA.cpp:
        * tao/PortableServer/ServantRetentionPolicyA.cpp:
        * tao/PortableServer/RequestProcessingPolicyA.cpp:
        * tao/PortableServer/PS_CurrentA.cpp:
        * tao/PortableServer/POAManagerA.cpp:
        * tao/PortableServer/LifespanPolicyA.cpp:
        * tao/PortableServer/ImplicitActivationPolicyA.cpp:
        * tao/PortableServer/IdUniquenessPolicyA.cpp:
        * tao/PortableServer/ForwardRequestA.cpp:
        * tao/PortableServer/AdapterActivatorA.cpp:
          Regenerated

        * tao/TAO_Internal.cpp:
          Added include of ace/Static_Object_Lock to get ACE_Static_Object_Lock

        * tao/UserException.cpp:
          Added include of ace/OS_NS_string.h to get ACE_OS::strcmp

        * tao/PortableServer/ThreadStrategySingleFactoryImpl.cpp:
        * tao/PortableServer/ThreadStrategyORBControl.cpp:
        * tao/PortableServer/ThreadStrategyFactoryImpl.cpp:
        * tao/PortableServer/ThreadStrategySingle.cpp:
        * tao/PortableServer/ServantRetentionStrategyRetainFactoryImpl.cpp:
        * tao/PortableServer/ServantRetentionStrategyFactoryImpl.cpp:
        * tao/PortableServer/ServantRetentionStrategyNonRetainFactoryImpl.cpp: